<?xml version="1.0"?>
<package format="3">
  <name>kuberobot_worlds</name>
  <version>1.0.0</version>
  <description>
    kuberobot worlds.
  </description>
  <license>Proprietary</license>
  <author email="kuberobot@kuberobot.com">kuberobot Maintainers</author>
  <maintainer email="kuberobot-maintainers@kuberobot.com">kuberobot Maintainers</maintainer>
  <buildtool_depend condition="$ROS_VERSION == 1">catkin</buildtool_depend>
  <buildtool_depend condition="$ROS_VERSION == 2">ament_cmake</buildtool_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>gazebo</exec_depend>
  <exec_depend>gazebo_plugins</exec_depend>
  <export>
    <build_type condition="$ROS_VERSION == 1">catkin</build_type>
    <build_type condition="$ROS_VERSION == 2">ament_cmake</build_type>
    <gazebo_ros gazebo_model_path="${prefix}/worlds"/>
  </export>
</package>
